--- a/metadata/md5-cache/app-office/scribus-1.4.6
+++ b/metadata/md5-cache/app-office/scribus-1.4.6
@@ -4,11 +4,11 @@ DESCRIPTION=Desktop publishing (DTP) and layout program
 EAPI=5
 HOMEPAGE=http://www.scribus.net/
 IUSE=cairo debug examples hunspell +minimal +pdf scripts templates tk linguas_af linguas_ar linguas_bg linguas_br linguas_ca linguas_cs_CZ linguas_cy linguas_da_DK linguas_de@1901 linguas_de_CH linguas_de linguas_el linguas_en_AU linguas_en_GB linguas_en_US linguas_eo linguas_es_ES linguas_et linguas_eu linguas_fi linguas_fr linguas_gl linguas_hu linguas_id linguas_it linguas_ja linguas_ko linguas_lt_LT linguas_nb_NO linguas_nl linguas_pl_PL linguas_pt_BR linguas_pt linguas_ru linguas_sa linguas_sk_SK linguas_sl linguas_sq linguas_sr linguas_sv linguas_th_TH linguas_tr linguas_uk linguas_zh_CN linguas_zh_TW python_targets_python2_7
-KEYWORDS=amd64 hppa ppc ppc64 ~sparc x86
+KEYWORDS=amd64 ~hppa ppc ppc64 ~sparc x86
 LICENSE=GPL-2
 RDEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk?] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_4(-),-python_single_target_python3_5(-),-python_single_target_python3_6(-),python_single_target_python2_7(+)] dev-libs/boost dev-libs/hyphen dev-libs/libxml2 dev-qt/qtcore:4 dev-qt/qtgui:4 media-libs/fontconfig media-libs/freetype:2 media-libs/lcms:2 media-libs/libpng:0 media-libs/tiff:0 net-print/cups sys-libs/zlib[minizip] virtual/jpeg:0= cairo? ( x11-libs/cairo[X,svg] ) !cairo? ( media-libs/libart_lgpl ) hunspell? ( app-text/hunspell ) pdf? ( app-text/podofo ) scripts? ( dev-python/pillow[tk?,python_targets_python2_7(-)?,-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_4(-),-python_single_target_python3_5(-),-python_single_target_python3_6(-),python_single_target_python2_7(+)] ) tk? ( dev-python/pillow[tk?,python_targets_python2_7(-)?,-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_4(-),-python_single_target_python3_5(-),-python_single_target_python3_6(-),python_single_target_python2_7(+)] ) app-text/ghostscript-gpl
 REQUIRED_USE=python_targets_python2_7 tk? ( scripts )
 SLOT=0
 SRC_URI=mirror://sourceforge/scribus/1.4.6/scribus-1.4.6.tar.xz
 _eclasses_=cmake-utils	f9fb12e2dbe2e0c9c17f030bae85eb02	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	227b041a120d309fdefbebb3b8c1dfa9	fdo-mime	995b19d3f30e956b4e1bc5a91fdc4ea7	flag-o-matic	2274fcc1e7ef6affaff5bcd636275417	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	multiprocessing	6f5991c7101863d0b29df63990ad852e	ninja-utils	ebb2eaddc6331c4fa000b8eb8f6fe074	python-single-r1	317a2557b4d7319a7418225f65accf77	python-utils-r1	c9de01becf9df3f8c10aeec3dc693f5d	toolchain-funcs	185a06792159ca143528e7010368e8af	versionator	c80ccf29e90adea7c5cae94b42eb76d0
-_md5_=cdc2e43b5672952fad54237c0565d684
+_md5_=57699ff1c1a2113267b01a9719bfaf78
