--- a/metadata/md5-cache/app-backup/amanda-3.5
+++ b/metadata/md5-cache/app-backup/amanda-3.5
@@ -3,11 +3,11 @@ DEPEND=sys-libs/readline:= virtual/awk app-arch/tar dev-lang/perl:= app-arch/dum
 DESCRIPTION=The Advanced Maryland Automatic Network Disk Archiver
 EAPI=6
 HOMEPAGE=http://www.amanda.org/
-IUSE=curl gnuplot ipv6 kerberos minimal nls readline s3 samba systemd xfs
+IUSE=curl gnuplot ipv6 kerberos minimal ndmp nls readline s3 samba systemd xfs
 KEYWORDS=~amd64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=HPND BSD BSD-2 GPL-2+ GPL-3+
 RDEPEND=sys-libs/readline:= virtual/awk app-arch/tar dev-lang/perl:= app-arch/dump net-misc/openssh >=dev-libs/glib-2.26.0 dev-perl/JSON dev-perl/Encode-Locale nls? ( virtual/libintl ) s3? ( >=net-misc/curl-7.10.0 ) !s3? ( curl? ( >=net-misc/curl-7.10.0 ) ) samba? ( net-fs/samba:= ) kerberos? ( app-crypt/mit-krb5 ) xfs? ( sys-fs/xfsdump ) !minimal? ( dev-perl/XML-Simple virtual/mailx app-arch/mt-st:= sys-block/mtx gnuplot? ( sci-visualization/gnuplot ) app-crypt/aespipe app-crypt/gnupg ) dev-lang/perl:=
 SLOT=0
 SRC_URI=mirror://sourceforge/amanda/amanda-3.5.tar.gz
 _eclasses_=autotools	dc412f38566b91012efd58b9c203e6c3	libtool	0081a71a261724730ec4c248494f044d	multilib	97f470f374f2e94ccab04a2fb21d811e	multiprocessing	6f5991c7101863d0b29df63990ad852e	perl-functions	01e8c68d5a528bbcda4d3c60205983df	perl-module	863b35d127db98823d439f8d73c2d011	systemd	34815d3b76e745c5ca33eec9f95074c2	toolchain-funcs	185a06792159ca143528e7010368e8af	user	e4b567c44272a719fabf53f0f885d3f7
-_md5_=3e1814b55683069c2e7f0e6d9b89eeb1
+_md5_=66e17b283773f11be1f134530068b28c
