--- a/metadata/md5-cache/dev-util/ccache-3.2.4
+++ b/metadata/md5-cache/dev-util/ccache-3.2.4
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst prepare prerm
 DEPEND=app-arch/xz-utils sys-libs/zlib
 DESCRIPTION=fast compiler cache
 EAPI=5
-HOMEPAGE=http://ccache.samba.org/
+HOMEPAGE=https://ccache.samba.org/
 KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-3
 RDEPEND=app-arch/xz-utils sys-libs/zlib sys-apps/gentoo-functions
 SLOT=0
-SRC_URI=http://samba.org/ftp/ccache/ccache-3.2.4.tar.xz
+SRC_URI=https://www.samba.org/ftp/ccache/ccache-3.2.4.tar.xz
 _eclasses_=epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	227b041a120d309fdefbebb3b8c1dfa9	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	readme.gentoo	589f4c6d735919e293942dd66311dc40	toolchain-funcs	185a06792159ca143528e7010368e8af
-_md5_=91ba46f054af6cc56737af6ef1c39acc
+_md5_=5389d037f7c4a8c2374028faa0df6672
