--- a/metadata/md5-cache/dev-util/ccache-3.2.5
+++ b/metadata/md5-cache/dev-util/ccache-3.2.5
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst prepare prerm
 DEPEND=app-arch/xz-utils sys-libs/zlib
 DESCRIPTION=fast compiler cache
 EAPI=5
-HOMEPAGE=http://ccache.samba.org/
+HOMEPAGE=https://ccache.samba.org/
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-3
 RDEPEND=app-arch/xz-utils sys-libs/zlib sys-apps/gentoo-functions
 SLOT=0
-SRC_URI=http://samba.org/ftp/ccache/ccache-3.2.5.tar.xz
+SRC_URI=https://www.samba.org/ftp/ccache/ccache-3.2.5.tar.xz
 _eclasses_=epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	227b041a120d309fdefbebb3b8c1dfa9	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	readme.gentoo-r1	6f03e110529650f57fc7d1fb908b8986	toolchain-funcs	185a06792159ca143528e7010368e8af
-_md5_=4579caab104ec57426c3439c51e95b88
+_md5_=aa142126eeb794036fd795c7de126d3a
