--- a/metadata/md5-cache/net-fs/cifs-utils-6.4
+++ b/metadata/md5-cache/net-fs/cifs-utils-6.4
@@ -2,13 +2,13 @@ DEFINED_PHASES=configure install postinst setup
 DEPEND=!net-fs/mount-cifs !<net-fs/samba-3.6_rc1 ads? ( sys-apps/keyutils sys-libs/talloc virtual/krb5 ) caps? ( !caps-ng? ( sys-libs/libcap ) ) caps? ( caps-ng? ( sys-libs/libcap-ng ) ) creds? ( sys-apps/keyutils )
 DESCRIPTION=Tools for Managing Linux CIFS Client Filesystems
 EAPI=5
-HOMEPAGE=http://wiki.samba.org/index.php/LinuxCIFS_utils
+HOMEPAGE=https://wiki.samba.org/index.php/LinuxCIFS_utils
 IUSE=+acl +ads +caps +caps-ng creds
 KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~arm-linux ~x86-linux
 LICENSE=GPL-3
 PDEPEND=!net-fs/mount-cifs !<net-fs/samba-3.6_rc1 ads? ( sys-apps/keyutils sys-libs/talloc virtual/krb5 ) caps? ( !caps-ng? ( sys-libs/libcap ) ) caps? ( caps-ng? ( sys-libs/libcap-ng ) ) creds? ( sys-apps/keyutils ) acl? ( || ( =net-fs/samba-3.6*[winbind] >=net-fs/samba-4.0.0_alpha1 ) )
 REQUIRED_USE=acl? ( ads )
 SLOT=0
-SRC_URI=ftp://ftp.samba.org/pub/linux-cifs/cifs-utils/cifs-utils-6.4.tar.bz2
+SRC_URI=https://www.samba.org/ftp/pub/linux-cifs/cifs-utils/cifs-utils-6.4.tar.bz2
 _eclasses_=epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	227b041a120d309fdefbebb3b8c1dfa9	linux-info	ca370deef9d44125d829f2eb6ebc83e0	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	toolchain-funcs	185a06792159ca143528e7010368e8af	versionator	c80ccf29e90adea7c5cae94b42eb76d0
-_md5_=5a278840bd9144d545be008777a0510f
+_md5_=b8337886583f23d65660184207abd84b
