--- a/metadata/md5-cache/media-fonts/hermit-1.1
+++ b/metadata/md5-cache/media-fonts/hermit-1.1
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm setup
 DEPEND=X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=A monospace font designed to be clear, pragmatic and very readable
 EAPI=5
-HOMEPAGE=http://pcaro.es/p/hermit/
+HOMEPAGE=https://pcaro.es/p/hermit/
 IUSE=X
 KEYWORDS=~amd64
 LICENSE=OFL-1.1
 SLOT=0
-SRC_URI=http://pcaro.es/d/otf-hermit-1.1.tar.gz
+SRC_URI=https://pcaro.es/d/otf-hermit-1.1.tar.gz
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	font	82836641e7d4639329d8c195234ad0e3	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=69a7b45574554a3a9a8bff8e1bc434c4
+_md5_=c12497958868a1282c39eaadb2e7b351
