--- a/metadata/md5-cache/media-fonts/paratype-2.5
+++ b/metadata/md5-cache/media-fonts/paratype-2.5
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm setup
 DEPEND=app-arch/unzip X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=ParaType font collection for languages of Russia
 EAPI=5
-HOMEPAGE=http://www.paratype.com/public/
+HOMEPAGE=https://www.paratype.com/public/
 IUSE=X X
 KEYWORDS=~amd64 ~x86
 LICENSE=OFL-1.1
 SLOT=0
-SRC_URI=http://www.paratype.ru/uni/public/PTSansOFL.zip -> paratype-2.5_Sans.zip http://www.paratype.ru/uni/public/PTSerifOFL.zip -> paratype-2.5_Serif.zip http://www.paratype.ru/uni/public/PTMonoOFL.zip -> paratype-2.5_Mono.zip
+SRC_URI=https://www.paratype.ru/uni/public/PTSansOFL.zip -> paratype-2.5_Sans.zip https://www.paratype.ru/uni/public/PTSerifOFL.zip -> paratype-2.5_Serif.zip https://www.paratype.ru/uni/public/PTMonoOFL.zip -> paratype-2.5_Mono.zip
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	font	82836641e7d4639329d8c195234ad0e3	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=3df5b9d69cd7640af288cfc4beaf1d37
+_md5_=9f0df6e91ca1dd04e876e11aec404329
