--- a/metadata/md5-cache/media-fonts/thaifonts-scalable-0.6.1
+++ b/metadata/md5-cache/media-fonts/thaifonts-scalable-0.6.1
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm setup
 DEPEND=X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=A collection of Free fonts for Thai
 EAPI=5
-HOMEPAGE=http://linux.thai.net/projects/thaifonts-scalable
+HOMEPAGE=https://linux.thai.net/projects/thaifonts-scalable
 IUSE=X
 KEYWORDS=amd64 ~arm ~arm64 x86
 LICENSE=|| ( GPL-2-with-font-exception GPL-3-with-font-exception )
 SLOT=0
 SRC_URI=ftp://linux.thai.net/pub/thailinux/software/thai-ttf/ttf-tlwg-0.6.1.tar.xz
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	font	82836641e7d4639329d8c195234ad0e3	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=84cf9c0b2568419920088e1a1fbf4816
+_md5_=9a2083b7b082839d1da26ccb3c8fc1d5
