Post-merge cache update

--- a/metadata/md5-cache/media-sound/alsa-tools-1.1.3
+++ b/metadata/md5-cache/media-sound/alsa-tools-1.1.3
@@ -2,7 +2,7 @@ DEFINED_PHASES=compile configure install prepare setup
 DEPEND=>=media-libs/alsa-lib-1.1.3 >=dev-python/pyalsa-1.0.26 fltk? ( >=x11-libs/fltk-1.3.0:1 ) gtk? ( >=dev-python/pygtk-2 x11-libs/gtk+:2 x11-libs/gtk+:3 ) virtual/pkgconfig >=app-portage/elt-patches-20170422 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.16:1.16 >=sys-devel/automake-1.15.1:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Advanced Linux Sound Architecture tools
 EAPI=6
-HOMEPAGE=http://www.alsa-project.org/
+HOMEPAGE=https://alsa-project.org/
 IUSE=fltk gtk alsa_cards_hdsp alsa_cards_hdspm alsa_cards_mixart alsa_cards_vx222 alsa_cards_usb-usx2y alsa_cards_sb16 alsa_cards_sbawe alsa_cards_emu10k1 alsa_cards_emu10k1x alsa_cards_ice1712 alsa_cards_rme32 alsa_cards_rme96 alsa_cards_sscape alsa_cards_pcxhr
 KEYWORDS=~amd64 ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
@@ -10,4 +10,4 @@ RDEPEND=>=media-libs/alsa-lib-1.1.3 >=dev-python/pyalsa-1.0.26 fltk? ( >=x11-lib
 SLOT=0.9
 SRC_URI=mirror://alsaproject/tools/alsa-tools-1.1.3.tar.bz2
 _eclasses_=autotools	4842e626555a9a4344f34cef2e190b67	desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	flag-o-matic	02908f00f002f0f07c5b74783d778325	libtool	0081a71a261724730ec4c248494f044d	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=924843fda3c125301b4e21b00540c5ba
+_md5_=2386af42d7eb48d651b654c19d7ad97c
