--- a/metadata/md5-cache/app-vim/indentpython-0.3
+++ b/metadata/md5-cache/app-vim/indentpython-0.3
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm
 DEPEND=app-arch/unzip || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 DESCRIPTION=vim plugin: Indent Python code according to PEP8
 EAPI=6
-HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=974
+HOMEPAGE=https://www.vim.org/scripts/script.php?script_id=974
 KEYWORDS=amd64 ppc ppc64 x86
 LICENSE=vim.org
 RDEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 SLOT=0
 SRC_URI=https://github.com/vim-scripts/indentpython.vim/archive/0.3.zip -> indentpython-0.3.zip
 _eclasses_=estack	43ddf5aaffa7a8d0482df54d25a66a1f	vim-doc	af2c81a1feeb0a99e91bee3e20769edb	vim-plugin	3160d9cb05ef44497be1485db0fe7590
-_md5_=2cc9c36f824c2633f949befc76cd449a
+_md5_=6a276818c12d8ddc16067d198a6dd3cd
