--- a/metadata/md5-cache/dev-scheme/racket-6.7
+++ b/metadata/md5-cache/dev-scheme/racket-6.7
@@ -4,11 +4,11 @@ DESCRIPTION=General purpose, multi-paradigm programming language in the Lisp-Sch
 EAPI=6
 HOMEPAGE=http://racket-lang.org/
 IUSE=doc +futures +jit minimal +places +threads +X
-KEYWORDS=amd64 ~arm x86
+KEYWORDS=amd64 ~arm ~ppc ~ppc64 x86
 LICENSE=LGPL-2.1
 RDEPEND=dev-db/sqlite:3 x11-libs/cairo[X?] virtual/libffi
 REQUIRED_USE=futures? ( jit )
 SLOT=0
 SRC_URI=minimal? ( http://download.racket-lang.org/installers/6.7/racket-minimal-6.7-src-builtpkgs.tgz ) !minimal? ( http://download.racket-lang.org/installers/6.7/racket-6.7-src-builtpkgs.tgz )
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	pax-utils	b963274a93e76570a88168c1f1db4cd7	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=20fcdf5a76f709d921950c5a2fa466c2
+_md5_=4b67c555f4a26847a057f04a885a3b9e
