--- a/metadata/md5-cache/net-firewall/ebtables-2.0.10.4
+++ b/metadata/md5-cache/net-firewall/ebtables-2.0.10.4
@@ -1,11 +1,12 @@
 DEFINED_PHASES=compile install prepare setup
-DESCRIPTION=Utility that enables basic Ethernet frame filtering on a Linux bridge, MAC NAT and brouting
+DESCRIPTION=Controls Ethernet frame filtering on a Linux bridge, MAC NAT and brouting
 EAPI=4
 HOMEPAGE=http://ebtables.sourceforge.net/
 IUSE=static
 KEYWORDS=amd64 ppc x86
 LICENSE=GPL-2
+RDEPEND=!<net-firewall/iptables-1.6.2-r2[nftables(-)] !net-misc/ethertypes
 SLOT=0
 SRC_URI=mirror://sourceforge/ebtables/ebtables-v2.0.10-4.tar.gz
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	flag-o-matic	02908f00f002f0f07c5b74783d778325	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf	versionator	ce21313503c41896ebcd7d58b0607e37
-_md5_=14a3b50fb1a5ee19b5261892b02f5417
+_md5_=da19734c1c583b501263ddf823f12f53
