--- a/metadata/md5-cache/app-vim/screen-1.5
+++ b/metadata/md5-cache/app-vim/screen-1.5
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm prepare unpack
 DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 DESCRIPTION=vim plugin: simulate a split shell with screen or tmux
 EAPI=5
-HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=2711
+HOMEPAGE=https://www.vim.org/scripts/script.php?script_id=2711
 KEYWORDS=amd64 x86
 LICENSE=public-domain
 RDEPEND=|| ( app-misc/screen app-misc/tmux ) || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 SLOT=0
 SRC_URI=https://github.com/vim-scripts/Screen-vim---gnu-screentmux/tarball/1.5 -> screen-1.5.tar.gz
 _eclasses_=estack	43ddf5aaffa7a8d0482df54d25a66a1f	vcs-snapshot	03289f51c769cf409d200d2d628cdd6e	vim-doc	af2c81a1feeb0a99e91bee3e20769edb	vim-plugin	3160d9cb05ef44497be1485db0fe7590
-_md5_=45b00527ff5d2655563be1a96f55bfb5
+_md5_=5d76eb2f1d9e00552b770787df0f48bc
