--- a/metadata/md5-cache/app-vim/vimpress-2.1.5
+++ b/metadata/md5-cache/app-vim/vimpress-2.1.5
@@ -2,11 +2,11 @@ DEFINED_PHASES=install postinst postrm prepare unpack
 DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 DESCRIPTION=vim plugin: manage wordpress blogs from vim
 EAPI=4
-HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=3510
+HOMEPAGE=https://www.vim.org/scripts/script.php?script_id=3510
 KEYWORDS=amd64 x86
 LICENSE=vim
 RDEPEND=|| ( app-editors/vim[python] app-editors/gvim[python] ) || ( dev-lang/python:2.7 dev-lang/python:2.6 ) dev-python/markdown || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 SLOT=0
 SRC_URI=https://github.com/vim-scripts/VimRepress/tarball/2.1.5 -> vimpress-2.1.5.tar.gz
 _eclasses_=estack	43ddf5aaffa7a8d0482df54d25a66a1f	vim-doc	af2c81a1feeb0a99e91bee3e20769edb	vim-plugin	3160d9cb05ef44497be1485db0fe7590
-_md5_=577a5a9219c90ebb224972ad63e3e253
+_md5_=e324869259bc98581493d674d0effe88
