--- a/metadata/md5-cache/games-misc/fortune-mod-chucknorris-0.1
+++ b/metadata/md5-cache/games-misc/fortune-mod-chucknorris-0.1
@@ -2,9 +2,9 @@ DEFINED_PHASES=install
 DESCRIPTION=Chuck Norris Facts
 EAPI=5
 HOMEPAGE=http://www.k-lug.org/~kessler/projects.html
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=games-misc/fortune-mod
 SLOT=0
 SRC_URI=http://www.k-lug.org/~kessler/chucknorris.tar.gz
-_md5_=a324b4cef7e62bee72ea8c41fbfba5c8
+_md5_=7ad78ed145e6ac39a270364e01a05d1b
