--- a/metadata/md5-cache/games-misc/fortune-mod-cs-1.6.9
+++ b/metadata/md5-cache/games-misc/fortune-mod-cs-1.6.9
@@ -4,9 +4,9 @@ DESCRIPTION=Database of the Czech and Slovak cookies for the fortune(6) program
 EAPI=5
 HOMEPAGE=http://ftp.fi.muni.cz/pub/linux/people/zdenek_pytela/
 IUSE=unicode
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=games-misc/fortune-mod
 SLOT=0
 SRC_URI=http://ftp.fi.muni.cz/pub/linux/people/zdenek_pytela/fortune-cs-1.6.9.tar.bz2
-_md5_=2f7340bd323e3160d3b7418cabcea86b
+_md5_=64cbe16d3ea64c6c3408825a6efc94e2
