--- a/metadata/md5-cache/games-misc/fortune-mod-familyguy-0.2
+++ b/metadata/md5-cache/games-misc/fortune-mod-familyguy-0.2
@@ -2,9 +2,9 @@ DEFINED_PHASES=install
 DESCRIPTION=Quotes from the TV-Series -Family Guy-
 EAPI=5
 HOMEPAGE=http://jon.oberheide.org/familyguy/
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=fairuse
 RDEPEND=games-misc/fortune-mod
 SLOT=0
 SRC_URI=http://jon.oberheide.org/familyguy/fortune-mod-familyguy-0.2.tar.gz
-_md5_=3212ce42bc1aa82abe9007b04ef51bc1
+_md5_=c0d8d905d37ee0131a0d4415e13bb26b
