--- a/metadata/md5-cache/games-misc/fortune-mod-firefly-2.1.1
+++ b/metadata/md5-cache/games-misc/fortune-mod-firefly-2.1.1
@@ -2,9 +2,9 @@ DEFINED_PHASES=install
 DESCRIPTION=Quotes from FireFly
 EAPI=5
 HOMEPAGE=http://www.daughtersoftiresias.org/progs/firefly/
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=fairuse
 RDEPEND=games-misc/fortune-mod
 SLOT=0
 SRC_URI=http://www.daughtersoftiresias.org/progs/firefly/fortune-firefly-2.1.1.tar.bz2
-_md5_=e41116e66826bd1df56a4298524a50c3
+_md5_=25690ac5fceb48046449943527ec9b69
