--- a/metadata/md5-cache/games-misc/fortune-mod-futurama-0.2
+++ b/metadata/md5-cache/games-misc/fortune-mod-futurama-0.2
@@ -2,9 +2,9 @@ DEFINED_PHASES=install
 DESCRIPTION=Quotes from the TV-Series -Futurama-
 EAPI=5
 HOMEPAGE=http://www.netmeister.org/misc.html
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=fairuse
 RDEPEND=games-misc/fortune-mod
 SLOT=0
 SRC_URI=http://www.netmeister.org/apps/fortune-mod-futurama-0.2.tar.gz
-_md5_=ecf5755a27a00dc54df9bc7819f2df50
+_md5_=73aa1922f6d2df52ef83b6342f43f8f5
