--- a/metadata/md5-cache/games-misc/fortune-mod-starwars-0.1
+++ b/metadata/md5-cache/games-misc/fortune-mod-starwars-0.1
@@ -2,10 +2,10 @@ DEFINED_PHASES=install
 DESCRIPTION=Quotes from StarWars, The Empire Strikes Back, and Return of the Jedi
 EAPI=5
 HOMEPAGE=http://www.splitbrain.org/projects/fortunes/starwars
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc64 ~s390 ~sh ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=games-misc/fortune-mod
 RESTRICT=mirror
 SLOT=0
 SRC_URI=http://www.splitbrain.org/_media/projects/fortunes/fortune-starwars.tgz
-_md5_=cc907d216b5ba0d8ff5bae23d149f282
+_md5_=f9d717d225cccbdee8cf632617fbc423
