--- a/metadata/md5-cache/app-text/xapian-omega-1.4.5
+++ b/metadata/md5-cache/app-text/xapian-omega-1.4.5
@@ -2,10 +2,10 @@ DEFINED_PHASES=install
 DEPEND=dev-libs/xapian:0/30 dev-lang/perl dev-libs/libpcre sys-libs/zlib
 DESCRIPTION=An application built on Xapian, consisting of indexers and a CGI search frontend
 EAPI=6
-HOMEPAGE=http://www.xapian.org/
+HOMEPAGE=https://xapian.org/
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=dev-libs/xapian:0/30 dev-lang/perl dev-libs/libpcre sys-libs/zlib
 SLOT=0
 SRC_URI=http://www.oligarchy.co.uk/xapian/1.4.5/xapian-omega-1.4.5.tar.xz
-_md5_=896c6ce81e54a59edaa5e64ffc5bc22c
+_md5_=86440555ea64bb10f680b41fc68345ea
