--- a/metadata/md5-cache/www-servers/varnish-5.2.1
+++ b/metadata/md5-cache/www-servers/varnish-5.2.1
@@ -2,7 +2,7 @@ DEFINED_PHASES=configure install prepare setup
 DEPEND=sys-libs/readline:0= dev-libs/libpcre[jit?] jemalloc? ( dev-libs/jemalloc ) sys-libs/ncurses:0= dev-python/docutils virtual/pkgconfig >=app-portage/elt-patches-20170422 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.16:1.16 >=sys-devel/automake-1.15.1:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 virtual/pkgconfig
 DESCRIPTION=Varnish is a state-of-the-art, high-performance HTTP accelerator
 EAPI=6
-HOMEPAGE=http://www.varnish-cache.org/
+HOMEPAGE=https://varnish-cache.org/
 IUSE=jemalloc jit static-libs python_targets_pypy python_targets_python2_7 python_targets_python3_4 python_targets_python3_5 python_targets_python3_6
 KEYWORDS=~amd64 ~mips ~ppc ~ppc64 ~x86
 LICENSE=BSD-2 GPL-2
@@ -12,4 +12,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=http://varnish-cache.org/_downloads/varnish-5.2.1.tgz
 _eclasses_=autotools	4842e626555a9a4344f34cef2e190b67	libtool	0081a71a261724730ec4c248494f044d	multibuild	72647e255187a1fadc81097b3657e5c3	multilib	97f470f374f2e94ccab04a2fb21d811e	python-r1	e9350ec46bb5c9f3504b4fbe8b8d8987	python-utils-r1	c9de01becf9df3f8c10aeec3dc693f5d	systemd	a31844b675f1a1fea87fbe1144aee5f5	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	user	8bc2845510e2109af75e3eeac607ec81
-_md5_=376dba0ca7c4b954f4bc1d55e59d6b25
+_md5_=2a1a5bdf7ab7a2ebc497f86f513c17af
