--- a/metadata/md5-cache/net-dns/dnssec-check-2.2
+++ b/metadata/md5-cache/net-dns/dnssec-check-2.2
@@ -2,11 +2,11 @@ DEFINED_PHASES=configure install prepare
 DEPEND=net-dns/dnssec-validator[threads] dev-qt/qtdeclarative:5
 DESCRIPTION=tests local resolver for support of DNSSEC validation
 EAPI=5
-HOMEPAGE=http://www.dnssec-tools.org
+HOMEPAGE=https://www.dnssec-tools.org
 KEYWORDS=~amd64 ~x86
 LICENSE=BSD
 RDEPEND=net-dns/dnssec-validator[threads] dev-qt/qtdeclarative:5
 SLOT=0
-SRC_URI=http://www.dnssec-tools.org/download/dnssec-check-2.2.tar.gz
+SRC_URI=https://www.dnssec-tools.org/download/dnssec-check-2.2.tar.gz
 _eclasses_=desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	qmake-utils	990448b067cb3cfe1443bc25fb57239c	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=ce18b6db74942f84baf0790a97b2bac7
+_md5_=c84a8446db420d828b041d45d2d62cb7
