--- a/metadata/md5-cache/net-dns/dnssec-nodes-2.2
+++ b/metadata/md5-cache/net-dns/dnssec-nodes-2.2
@@ -2,11 +2,11 @@ DEFINED_PHASES=compile configure install prepare unpack
 DEPEND==net-dns/dnssec-validator-2.2-r1[threads] dev-qt/qtcore:4
 DESCRIPTION=graphically depicts the DNSSEC results from a lookup via logfiles
 EAPI=5
-HOMEPAGE=http://www.dnssec-tools.org
+HOMEPAGE=https://www.dnssec-tools.org
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND==net-dns/dnssec-validator-2.2-r1[threads] dev-qt/qtcore:4
 SLOT=0
-SRC_URI=http://www.dnssec-tools.org/download/dnssec-nodes-2.2.tar.gz
+SRC_URI=https://www.dnssec-tools.org/download/dnssec-nodes-2.2.tar.gz
 _eclasses_=base	983774947da124fb7d542ce25a218bb1	desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	97f470f374f2e94ccab04a2fb21d811e	preserve-libs	ef207dc62baddfddfd39a164d9797648	qmake-utils	990448b067cb3cfe1443bc25fb57239c	qt4-r2	b7985a3197fbc3a22d059f19904e735b	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=ceae45bf7a0203722bfa1ef56bff1a85
+_md5_=42def3514c547e534d6fd17aa1ae161b
