--- a/metadata/md5-cache/dev-python/bsddb3-6.1.1
+++ b/metadata/md5-cache/dev-python/bsddb3-6.1.1
@@ -2,7 +2,7 @@ DEFINED_PHASES=compile configure install prepare test
 DEPEND=>=sys-libs/db-4.7:= <sys-libs/db-6.2:= dev-python/setuptools[python_targets_python2_7(-)?,python_targets_python3_4(-)?,python_targets_python3_5(-)?,-python_single_target_python2_7(-),-python_single_target_python3_4(-),-python_single_target_python3_5(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[threads(+)] ) python_targets_python3_5? ( dev-lang/python:3.5[threads(+)] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_4(-)?,python_targets_python3_5(-)?,-python_single_target_python2_7(-),-python_single_target_python3_4(-),-python_single_target_python3_5(-)]
 DESCRIPTION=Python bindings for Berkeley DB
 EAPI=5
-HOMEPAGE=http://www.jcea.es/programacion/pybsddb.htm https://pypi.python.org/pypi/bsddb3
+HOMEPAGE=https://www.jcea.es/programacion/pybsddb.htm https://pypi.python.org/pypi/bsddb3
 IUSE=doc python_targets_python2_7 python_targets_python3_4 python_targets_python3_5
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~amd64-linux ~x86-linux
 LICENSE=BSD
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_4 python_targe
 SLOT=0
 SRC_URI=mirror://pypi/b/bsddb3/bsddb3-6.1.1.tar.gz
 _eclasses_=db-use	582140d1a711279e50ce284fc7b609f5	desktop	2ccd1dd1dd7bfb8795eea024a4f91bb6	distutils-r1	372bbe39047c0a2550319a3a82f3e063	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	63392afb034aad67f17fa129019eb4d9	ltprune	2770eed66a9b8ef944714cd0e968182e	multibuild	72647e255187a1fadc81097b3657e5c3	multilib	97f470f374f2e94ccab04a2fb21d811e	multiprocessing	cac3169468f893670dac3e7cb940e045	preserve-libs	ef207dc62baddfddfd39a164d9797648	python-r1	e9350ec46bb5c9f3504b4fbe8b8d8987	python-utils-r1	c9de01becf9df3f8c10aeec3dc693f5d	toolchain-funcs	885c7d8dd70a58825f3d17e35a3cd1e9	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf	versionator	ce21313503c41896ebcd7d58b0607e37	xdg-utils	f2c8335407f0b935b0a96d4adf23ef25
-_md5_=11559aa5fdc63ca68a1d63545341f2e3
+_md5_=b61ae59ca016b6e6f8e7d590bbf324bd
